--- a/HeroHQ/ClientApp/src/app/newhero/newhero.component.html
+++ b/HeroHQ/ClientApp/src/app/newhero/newhero.component.html
@@ -5,19 +5,19 @@
             <div class="col-xs-6">
                 <p class="line">
                     <label for="">Quel est votre nom de héro?</label>
-                    <input type="text" class="mb0 wide" required id="newhero_name">
+                    <input type="text" class="mb0 wide" id="hero-name" name="hero-name" [(ngModel)]="hero.nom" required>
                 </p>
                 <p class="line">
                     <label for="">Quel âge avez vous?</label>
-                    <input type="number" class="mb0 wide" required id="newhero_age" min="16" max="99999999" value="18">
+                    <input type="number" class="mb0 wide" id="hero-age" name="hero-age" min="16" max="99999999" [(ngModel)]="hero.age" required>
                 </p>
                 <p class="line">
                     <label for="">Quel est votre pouvoir?</label>
-                    <input type="text" class="mb0 wide" required id="newhero_power">
+                    <input type="text" class="mb0 wide" id="hero-power" name="hero-power" [(ngModel)]="hero.power" required>
                 </p>
                 <p class="line">
                     <label for="">Quel est votre citation de référance?</label>
-                    <input type="text" class="mb0 wide" required id="newhero_mantra">
+                    <input type="text" class="mb0 wide" id="hero-mantra" name="hero-mantra" [(ngModel)]="hero.mantra" required>
                 </p>
             </div>
             <div class="col-xs-6">
@@ -26,7 +26,7 @@
                     <input type="file" class="mb0" id="file-input" (change)="cropImgFunc($event)">
                 </p>
                 <p class="line ac">
-                    <img class="current_img" id="imgPreview" src="assets/images/hero_img_placeholder.png" alt="Visuel hero" width="200" height="200">
+                    <img class="current_img" id="imgPreview" name="imgPreview" src="assets/images/hero_img_placeholder.png" alt="Visuel hero" width="200" height="200">
                 </p>
             </div>
             <div class="col-xs-12">
